Blog files added

--- a/_posts/project/2018-05-04-NLP.md
+++ b/_posts/project/2018-05-04-NLP.md
@@ -1,8 +1,8 @@
 ---
 layout: posts
 title: Natural Language Processing
-feature-img: "/images/MapOfPlaces.png"
-thumbnail: "/images/thumbs/MapOfPlaces.png"
+feature-img: "/images/project/MapOfPlaces.png"
+thumbnail: "/images/project/thumbs/MapOfPlaces.png"
 tags: [NLP, googleAPI, bokeh]
 teaser: Mapping places mentionned in a poem - an application of Natural Language Processing
 excerpt_separator: <!--more-->
