Thumbs added for KDD

--- a/_posts/blog/2019-08-05-kdd.md
+++ b/_posts/blog/2019-08-05-kdd.md
@@ -1,8 +1,8 @@
 ---
 layout: posts
 title: KDD in Anchorage
-feature-img: "/images/blog/kdd.png"
-thumbnail: "/images/blog/thumbs/kdd.png"
+feature-img: "/images/blog/kdd.jpg"
+thumbnail: "/images/blog/thumbs/kdd.jpg"
 tags: [Conference, Machine Learning, Travel]
 teaser: Knowledge Discovery and Data mining conference in Anchorage (Alaska) - August 2019
 
