edited images blog

--- a/_posts/blog/2019-07-01-ECCA-2019.md
+++ b/_posts/blog/2019-07-01-ECCA-2019.md
@@ -1,8 +1,8 @@
 ---
 layout: posts
 title: ECCA 2019
-feature-img: "/images/blog/ECCA.png"
-thumbnail: "/images/blog/thumbs/ECCA.png"
+feature-img: "/images/blog/ECCA.jpg"
+thumbnail: "/images/blog/thumbs/ECCA.jpg"
 tags: [Conference, Criminology, Travel]
 teaser: Environmental Criminology and Crime Analysis international symposium - June 2019 (Guangzhou, China)
 ---
