Edited blog posts

--- a/_posts/blog/2019-07-01-ECCA-2019.md
+++ b/_posts/blog/2019-07-01-ECCA-2019.md
@@ -1,10 +1,10 @@
 ---
 layout: posts
-title: ECCA 2019
+title: Environmental Criminology and Crime Analysis international symposium
 feature-img: "/images/blog/ECCA.jpg"
 thumbnail: "/images/blog/thumbs/ECCA.jpg"
 tags: [Conference, Criminology, Travel]
-teaser: Environmental Criminology and Crime Analysis international symposium - June 2019 (Guangzhou, China)
+teaser: June 2019 - Guangzhou (China)
 ---
 
 
