--- a/_posts/blog/2019-08-05-kdd.md
+++ b/_posts/blog/2019-08-05-kdd.md
@@ -1,10 +1,10 @@
 ---
 layout: posts
-title: KDD in Anchorage
+title: Knowledge Discovery and Data mining conference
 feature-img: "/images/blog/kdd.jpg"
 thumbnail: "/images/blog/thumbs/kdd.jpg"
 tags: [Conference, Machine Learning, Travel]
-teaser: Knowledge Discovery and Data mining conference in Anchorage (Alaska) - August 2019
+teaser: August 2019 - Anchorage (Alaska)
 
 ---
 
