Update and rename 2019-08-05-kdd.md to 2019-08-05-kdd-2019.md

--- a/_posts/blog/2019-08-05-kdd-2019.md
+++ b/_posts/blog/2019-08-05-kdd-2019.md
@@ -1,6 +1,7 @@
 ---
 layout: posts
-title: Knowledge Discovery and Data mining conference
+small-title: KDD 2019
+big-title: Knowledge Discovery and Data mining conference
 feature-img: "/images/blog/kdd.jpg"
 thumbnail: "/images/blog/thumbs/kdd.jpg"
 tags: [Conference, Machine Learning, Travel]
