Adds link to Kepler map html

--- a/_posts/project/2020-09-23-GA.md
+++ b/_posts/project/2020-09-23-GA.md
@@ -79,7 +79,10 @@ Visualisation:
 ![](/images/project/ga-num-vehicles.gif)
 - map best strategy num of vehicles
 Click on the image below to open interactive kepler map
-![](/images/project/keplerMap.png)
+[![Kepler map](/images/project/keplerMap.png)](/images/project/maps/PS.kgl.html)
+
+
+![/images/project/keplerMap.png](/images/project/maps/PS.kgl.html)
 
 - maybe genealogy tree
 
