Tinkers with layout

--- a/_posts/project/2020-09-23-GA.md
+++ b/_posts/project/2020-09-23-GA.md
@@ -1,6 +1,6 @@
 ---
 layout: posts
-small-title: Genetic Algortihm
+small-title: Genetic Algorithm
 big-title: Genetic Algorithm - optimsing police resource allocation
 feature-img: "/images/project/keplerMap.png"
 thumbnail: "/images/project/thumbs/route-explained.png"
@@ -75,14 +75,15 @@ Screenshot of logbook for 50 generations 100 individuals
 
 Visualisation:
 - graph fitness reduction 
+
 - GIF learning num vehicles
 ![](/images/project/ga-num-vehicles.gif)
+
 - map best strategy num of vehicles
 Click on the image below to open interactive kepler map
-[![Kepler map](/images/project/keplerMap.png)](/images/project/maps/PS.kgl.html)
 
+[![Kepler map](/images/project/keplerMap.png =250x)](/images/project/maps/PS.kgl.html)
 
-![/images/project/keplerMap.png](/images/project/maps/PS.kgl.html)
 
 - maybe genealogy tree
 
