Adds result figures for GA

--- a/_posts/project/2020-09-23-GA.md
+++ b/_posts/project/2020-09-23-GA.md
@@ -76,7 +76,25 @@ Screenshot of logbook for 50 generations 100 individuals
 Visualisation:
 - graph fitness reduction 
 
+<p align="center">
+  <img src="/images/project/keplerMap.png" height="600">
+</p>
+<p align="center">
+  <em>Evolution of minimum fitness and average num vehicles through generations</em>
+</p>
+
+
+
 - GIF learning num vehicles
+
+<p align="center">
+  <img src="/images/project/fitness_curve.png" height="600">
+</p>
+<p align="center">
+  <em>Interactive map of Detroit police stations</em>
+</p>
+
+
 
 ![](/images/project/ga-num-vehicles.gif)
 
@@ -117,9 +135,12 @@ Instead, there are multiple Pareto optimal solutions along the Pareto frontier.
 
 ### Value of the Research
 
+
 Coming soon
 
+
 ### Link to the project code
+
 
 See the project repository for more details on implementation.
 
