--- a/_posts/project/2020-09-23-GA.md
+++ b/_posts/project/2020-09-23-GA.md
@@ -82,15 +82,34 @@ Visualisation:
   <em>Evolution of minimum fitness and average num vehicles through generations</em>
 </p>
 
+We notice that the GA learns after only a few generations that response time can be reduced by increasing the total number of vehicles deployed (as well as deploying them to the adequate stations.) 
+
+Let's see which stations are being allocated more vehicles troughout the learning process. 
+
+
 <p align="center">
-  <img src="/images/project/ga-num-vehicles.gif" height="600">
+  <img src="/images/project/ga_num_veh_race.gif" height="400">
+</p>
+<p align="center">
+  <em>Evolution of number of vehicles allocated to stations through generations</em>
+</p>
+
+<p align="center">
+  <img src="/images/project/ga_num_veh_static.gif" height="400">
 </p>
 <p align="center">
   <em>Evolution of number of vehicles allocated to stations through generations</em>
 </p>
 
 
-Click on the image below to open interactive kepler map
+
+
+The barcharts show, for each generation, the spatial allocation (of vehicles to stations) for the overall best individual known to the GA. This individual is recorded in the 'hall of fame', which is updated at every generation. If a better individual is found, it will replace the current best individual in the 'hall of fame'. There is only space for one 'champion' individual in the 'hall of fame'. 
+
+Fewer changes to the allocation of vehicles are made later in the learning process, as no better champion strategy is found.
+
+
+Now let's have a look at the spatial allocation of these vehicles to the police stations in Detroit. Click on the image below to open the interactive kepler map.
 
 <p align="center">
   <a href="/images/project/maps/PS.kgl.html" target="_blank">
@@ -107,9 +126,8 @@ Click on the image below to open interactive kepler map
 - maybe genealogy tree
 
 
-We notice that the GA learns after a few iterations that the best strategies are those that deploy **more vehicles**. 
+We've observed that the GA learns that the best strategies are those that deploy **more vehicles**. 
 Of course in practice, this is not doable, as the police face budget restrictions. Instead, it makes more sense to inlcude another objective in the optimisation: minimising cost. 
-
 
 #### 2. Multi objective optimisation of police resource allocation startegy.
 
