Creates thumbnail prject image

--- a/_posts/project/2020-09-23-GA.md
+++ b/_posts/project/2020-09-23-GA.md
@@ -2,8 +2,8 @@
 layout: posts
 small-title: Optimising police resource allocation
 big-title: Optimsing police resource allocation with genetic Algorithms
-feature-img: "/images/project/keplerMap.png"
-thumbnail: "/images/project/thumbs/route-explained.png"
+feature-img: "/images/project/fitness_curve.png"
+thumbnail: "/images/project/thumbs/fitness_curve.jpg"
 tags: [python, genetic algorithms, multiprocessing, policing, optimisation]
 teaser: Application of Genetic Algorithms to the optimisation of police deployment
 ---
