Adds logbook to project

--- a/_posts/project/2020-09-23-GA.md
+++ b/_posts/project/2020-09-23-GA.md
@@ -77,7 +77,12 @@ Coming soon
 
 #### 1. Single objective optimisation of police resource allocation startegy.
 
-Screenshot of logbook for 50 generations 100 individuals
+<p align="center">
+  <img src="/images/project/logbook.png" height="300">
+</p>
+<p align="center">
+  <em>GA logbook for 20 generations and 40 individuals</em>
+</p>
 
 Visualisation:
 
