Adds kepler map for CFS playback

--- a/_posts/project/2020-06-22-viz-CFS.md
+++ b/_posts/project/2020-06-22-viz-CFS.md
@@ -1,11 +1,11 @@
 ---
 layout: posts
-small-title: Optimising police resource allocation
-big-title: Optimsing police resource allocation with genetic Algorithms
-feature-img: "/images/project/fitness_curve.png"
+small-title: Visualisation of calls for service in Detroit
+big-title: Data visualisation of calls for service in Detroit
+feature-img: ""
 thumbnail: "/images/project/thumbs/fitness_curve.jpg"
-tags: [python, genetic algorithms, multiprocessing, policing, optimisation]
-teaser: Application of Genetic Algorithms to the optimisation of police deployment
+tags: [python, data visualisation, maps, policing]
+teaser: A data exploration of police demand
 ---
 
 ### Project background
@@ -13,43 +13,7 @@ teaser: Application of Genetic Algorithms to the optimisation of police deployme
 Coming soon
 
 [comment]: <> (
-- Why we are optimising police resource allocation strategies.
-- Why we chose GAs.)
-
-
-
-
-### GA overview
-
-
-[comment]: <> (
-Population of individual strategies made of key parameters. 
-List of parameters:
--
--
--)
-
-
-
-In the single-objective optimisation, the only objective is to minimise **response time**, as a proxy for **effectivness**.
-
-
-In the multi-objective optimisation, on the other hand, two competeting objectives are chosen:
-- Effectivness: Minimise response time
-- Efficiency: Minimise number of vehicles deployed
-
-
-At each generation: 
-
-1. Breed population: Create lambda offspring from mu parents in the population: 
-- crossover (pair of parents) with additional possible mutation, or
-- cloning (one parent) with additional possible mutation.
-
-If mutating the offspring, all feature in the individual have the same independant probability of being mutated.
-
-2. Survivor selection: Select mu survivors amongst the lambda offspring using the chosen selection algorithm.
-This applies a selective pressure and maintain the population size mu constant across generations.
-Each individual strategy is evaluated by running an ABM with its parameters (see [ABM of police dispatch](https://mednche.github.io/2019/09/23/ABM-police.html) project for details on ABM implementation.)
+- What is police demand. Introduce abreviation CFS
 
 
 ### Data 
@@ -65,92 +29,23 @@ In order to make the simulation more realistic, the following data was incorpora
 For analysis:
 - [Boundaries of police districts](https://data.detroitmi.gov/Government/City-Council-Districts/4vse-9zps)
 
-### Methods
+### Maps
 
+The dataset is huge. In order to make the visualisation smoother, we'll select a sample of it. 
 
-Coming soon
+Let's say we are interested in visualising CFS demand for the evening shift of January 20, 2019. The shift begins at 4pm and runs for 11 hours.
 
-
-
-### Results
-
-
-#### 1. Single objective optimisation of police resource allocation startegy.
+Click on the map below to open an interactive map
 
 <p align="center">
-  <img src="/images/project/logbook.png" height="300">
-</p>
-<p align="center">
-  <em>GA logbook for 20 generations and 40 individuals</em>
-</p>
-
-Visualisation:
-
-<p align="center">
-  <img src="/images/project/fitness_curve.png" height="300">
-</p>
-<p align="center">
-  <em>Evolution of minimum fitness and average num vehicles through generations</em>
-</p>
-
-We notice that the GA learns after only a few generations that response time can be reduced by increasing the total number of vehicles deployed (as well as deploying them to the adequate stations.) 
-
-Let's see which stations are being allocated more vehicles troughout the learning process. 
-
-
-<p align="center">
-  <img src="/images/project/ga_num_veh_race.gif" height="400">
-</p>
-<p align="center">
-  <em>Evolution of number of vehicles allocated to stations through generations</em>
-</p>
-
-<p align="center">
-  <img src="/images/project/ga_num_veh_static.gif" height="400">
-</p>
-<p align="center">
-  <em>Evolution of number of vehicles allocated to stations through generations</em>
-</p>
-
-
-
-
-The barcharts show, for each generation, the spatial allocation (of vehicles to stations) for the overall best individual known to the GA. This individual is recorded in the 'hall of fame', which is updated at every generation. If a better individual is found, it will replace the current best individual in the 'hall of fame'. There is only space for one 'champion' individual in the 'hall of fame'. 
-
-Fewer changes to the allocation of vehicles are made later in the learning process, as no better champion strategy is found.
-
-
-Now let's have a look at the spatial allocation of these vehicles to the police stations in Detroit. Click on the image below to open the interactive kepler map.
-
-<p align="center">
-  <a href="/images/project/maps/PS.kgl.html" target="_blank">
-    <img src="/images/project/keplerMap.png" height="600">
+  <a href="/images/project/maps/CFS_playback.kgl.html" target="_blank">
+    <img src="/images/project/CFS_playback.png" height="600">
   </a>
 </p>
 
 <p align="center">
-  <em>Interactive map of Detroit police stations</em>
+  <em>Interactive map of Detroit CFS</em>
 </p>
-
-
-
-- maybe genealogy tree
-
-
-We've observed that the GA learns that the best strategies are those that deploy **more vehicles**. 
-Of course in practice, this is not doable, as the police face budget restrictions. Instead, it makes more sense to inlcude another objective in the optimisation: minimising cost. 
-
-#### 2. Multi objective optimisation of police resource allocation startegy.
-
-Because the two objectives are competing, there is no single optimal solution. 
-Instead, there are multiple Pareto optimal solutions along the Pareto frontier.
-
-<insert Parto frontier result>
-
-
-
-
-
 
 ### Value of the Research
 
@@ -160,7 +55,5 @@ Coming soon
 
 ### Link to the project code
 
-
-See the project repository for more details on implementation.
 
 Coming soon
