--- a/_posts/project/2020-06-22-viz-CFS.md
+++ b/_posts/project/2020-06-22-viz-CFS.md
@@ -3,7 +3,7 @@ layout: posts
 small-title: Visualisation of calls for service in Detroit
 big-title: Data visualisation of calls for service in Detroit
 feature-img: ""
-thumbnail: "/images/project/thumbs/fitness_curve.jpg"
+thumbnail: "/images/project/thumbs/CFS_playback.png"
 tags: [python, data visualisation, maps, policing]
 teaser: A data exploration of police demand
 ---
