--- a/_posts/project/2020-06-22-viz-CFS.md
+++ b/_posts/project/2020-06-22-viz-CFS.md
@@ -45,6 +45,11 @@ Click on the map below to open an interactive map
   <em>Interactive map of Detroit CFS</em>
 </p>
 
+
+<video controls="controls" width="800" height="600" 
+       name="Video Name" src="/images/project/maps/CFS_playback.mov"></video>
+
+
 ### Value of the Research
 
 
