--- a/_posts/project/2020-06-19-GA.md
+++ b/_posts/project/2020-06-19-GA.md
@@ -123,7 +123,7 @@ Fewer changes to the allocation of vehicles are made later in the learning proce
 Now let's have a look at the spatial allocation of these vehicles to the police stations in Detroit. Click on the image below to open the interactive kepler map.
 
 <p align="center">
-  <a href="/images/project/maps/PS.kgl.html" target="_blank">
+  <a href="/images/project/maps/PS.html" target="_blank">
     <img src="/images/project/keplerMap.png" height="600">
   </a>
 </p>
